chore: build with java 18